[package]
name = "rust-s3-upload"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-s3 = "0.6.0"
structopt = "0.3.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.5"
aws-endpoint =  "0.6.0"
http = "0.2.6"
async-std = "1.10.0"
bytes = "1.1.0"
futures-util = "0.3.19"